capitalize user input when rendering to history list and fix html spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,3 +39,7 @@ img {
     padding: 0px;
     margin: 0px;
 }
+
+#city-history button{
+    text-transform: capitalize;
+}
